Use Vector API incubator