@@ -153,7 +153,7 @@
           <version>2.22.2</version>
           <configuration>
             <reuseForks>false</reuseForks>
-            <argLine>-Dcom.aparapi.executionMode=JTP</argLine>
+            <argLine>-Dcom.aparapi.executionMode=JTP --add-modules=jdk.incubator.vector</argLine>
             <includes>
               <include>**/*Test.java</include>
             </includes>
